--- a/index.html
+++ b/index.html
@@ -176,6 +176,7 @@
           <p>Welcome to <b>PicoAudio</b>: enabling <b>P</b>recise t<b>I</b>ming and frequency <b>CO</b>ntrollability of audio events </p>
           <p>Here showcases the timing control performance of PicoAudio on four test sets. </p>
           <p>Enjoy your browsing!</p>
+           |<a href="https://huggingface.co/spaces/ZeyuXie/PicoAudioo" class="btn border-white bg-white fw-bold">HuggingFace</a>|<a href="https://arxiv.org/abs/2407.02869v1" class="btn border-white bg-white fw-bold">Paper</a>|<a href="https://github.com/zeyuxie29/PicoAudio" class="btn border-white bg-white fw-bold">Code</a>|
         </div>
       </div>
     </header>
